<resources>
    <string name="app_name">Inventory</string>
    <string name="action_insert_item">Add an item</string>
    <string name="action_delete_all_entries">Delete all item(s)</string>
    <string name="category_name">Name</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_price">Price</string>
    <string name="hint_item_name">Name</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_item_price">Price</string>
    <string name="insert_item_failed">Error saving an item</string>
    <string name="insert_item_successful">Item saved</string>
    <string name="action_save">Save</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Delete this pet?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_pet_successful">Pet deleted</string>
    <string name="editor_delete_pet_failed">Error with deleting pet</string>
    <string name="order">Order</string>
    <string name="decrement_toast">You can\'t have less than 0</string>
</resources>
